docs/api/qiskit/0.39/result.md
---
title: result
description: API reference for qiskit.result
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.result
---

<span id="module-qiskit.result" />

<span id="qiskit-result" />

# Experiment Results

<span id="module-qiskit.result" />

`qiskit.result¶`

|                                                                                                                               |                                                                      |
| ----------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| [`Result`](qiskit.result.Result "qiskit.result.Result")(backend\_name, backend\_version, ...\[, ...])                         | Model for Results.                                                   |
| [`ResultError`](qiskit.result.ResultError "qiskit.result.ResultError")(error)                                                 | Exceptions raised due to errors in result output.                    |
| [`Counts`](qiskit.result.Counts "qiskit.result.Counts")(data\[, time\_taken, creg\_sizes, ...])                               | A class to store a counts result from a circuit execution.           |
| [`marginal_counts`](qiskit.result.marginal_counts "qiskit.result.marginal_counts")(result\[, indices, inplace, ...])          | Marginalize counts from an experiment over some indices of interest. |
| [`marginal_distribution`](qiskit.result.marginal_distribution "qiskit.result.marginal_distribution")(counts\[, indices, ...]) | Marginalize counts from an experiment over some indices of interest. |
| [`marginal_memory`](qiskit.result.marginal_memory "qiskit.result.marginal_memory")(memory\[, indices, ...])                   | Marginalize shot memory                                              |

## Distributions

<span id="module-qiskit.result" />

`¶`

|                                                                                                               |                                                          |
| ------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------- |
| [`ProbDistribution`](qiskit.result.ProbDistribution "qiskit.result.ProbDistribution")(data\[, shots])         | A generic dict-like class for probability distributions. |
| [`QuasiDistribution`](qiskit.result.QuasiDistribution "qiskit.result.QuasiDistribution")(data\[, shots, ...]) | A dict-like class for representing quasi-probabilities.  |

## Expectation values

<span id="module-qiskit.result" />

`¶`

|                                                                                                                              |                                                        |
| ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------ |
| [`sampled_expectation_value`](qiskit.result.sampled_expectation_value "qiskit.result.sampled_expectation_value")(dist, oper) | Computes expectation value from a sampled distribution |

## Mitigation

<span id="module-qiskit.result" />

`¶`

|                                                                                                                                         |                                                 |
| --------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
| [`BaseReadoutMitigator`](qiskit.result.BaseReadoutMitigator "qiskit.result.BaseReadoutMitigator")()                                     | Base readout error mitigator class.             |
| [`CorrelatedReadoutMitigator`](qiskit.result.CorrelatedReadoutMitigator "qiskit.result.CorrelatedReadoutMitigator")(assignment\_matrix) | N-qubit readout error mitigator.                |
| [`LocalReadoutMitigator`](qiskit.result.LocalReadoutMitigator "qiskit.result.LocalReadoutMitigator")(\[assignment\_matrices, ...])      | 1-qubit tensor product readout error mitigator. |

